// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deriveAll – characterisation > auto: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 8199.67,
      "bound": 5340.83,
      "deficitMonthly": 0,
      "sp": 2858.84,
      "year": 2026,
    },
    {
      "avail": 9486.28,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 5136.28,
      "year": 2031,
    },
    {
      "avail": 11573.08,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 8023.08,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 300,
    "avail": 8199.67,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2858.84,
    "immoNetCF": -1700.33,
    "quote": 34.87,
    "saldo": 0,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 6,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 39,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 920000,
      "cons": 920000,
      "opt": 920000,
      "sp": 2859,
    },
    {
      "age": 45,
      "base": 1100224,
      "cons": 1006204,
      "opt": 1203740,
      "sp": 5136,
    },
    {
      "age": 50,
      "base": 1520275,
      "cons": 1303362,
      "opt": 1781365,
      "sp": 8023,
    },
    {
      "age": 55,
      "base": 2159450,
      "cons": 1773268,
      "opt": 2663319,
      "sp": 9667,
    },
    {
      "age": 60,
      "base": 2689308,
      "cons": 2071347,
      "opt": 3557436,
      "sp": 7571,
    },
    {
      "age": 65,
      "base": 3064011,
      "cons": 2170382,
      "opt": 4423553,
      "sp": 1375,
    },
    {
      "age": 70,
      "base": 3403531,
      "cons": 2204773,
      "opt": 5392423,
      "sp": 1942,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 2722.7,
    },
    {
      "cls": "Krypto",
      "monthly": 136.14,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > complex: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 8164.5,
      "bound": 5340.83,
      "deficitMonthly": 0,
      "sp": 2500,
      "year": 2026,
    },
    {
      "avail": 9429.24,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 1831.38,
      "year": 2031,
    },
    {
      "avail": 11488.14,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 2901.35,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 264.83,
    "avail": 8164.5,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2500,
    "immoNetCF": -1700.33,
    "quote": 30.62,
    "saldo": 323.67,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 6,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 39,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 920000,
      "cons": 920000,
      "opt": 920000,
      "sp": 2500,
    },
    {
      "age": 45,
      "base": 1130790,
      "cons": 1039858,
      "opt": 1230008,
      "sp": 1831,
    },
    {
      "age": 50,
      "base": 1481124,
      "cons": 1266585,
      "opt": 1736306,
      "sp": 2901,
    },
    {
      "age": 55,
      "base": 2088857,
      "cons": 1702733,
      "opt": 2587572,
      "sp": 3126,
    },
    {
      "age": 60,
      "base": 2676965,
      "cons": 2043053,
      "opt": 3559479,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 3283110,
      "cons": 2322753,
      "opt": 4727612,
      "sp": 1151,
    },
    {
      "age": 70,
      "base": 4010706,
      "cons": 2635674,
      "opt": 6252077,
      "sp": 1644,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > complex: filtered to one owner 1`] = `
{
  "cashflowSample": [
    {
      "avail": 4259,
      "bound": 4552.5,
      "deficitMonthly": 93.5,
      "sp": 0,
      "year": 2026,
    },
    {
      "avail": 4942.32,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 1392.32,
      "year": 2031,
    },
    {
      "avail": 5715.44,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 2165.44,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 0,
    "avail": 4259,
    "bound": 4552.5,
    "deficitMonthly": 93.5,
    "eff": 0,
    "immoNetCF": -941,
    "quote": 0,
    "saldo": -293.5,
    "streamExpense": 3850,
    "streamIncome": 5200,
  },
  "debt": 230000,
  "gross": 560000,
  "loans": [
    {
      "annuitat": 552.5,
      "id": "x1",
      "yrsLeft": 6,
    },
    {
      "annuitat": 921,
      "id": "x3",
      "yrsLeft": 39,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 330000,
  "projection": [
    {
      "age": 40,
      "base": 370000,
      "cons": 370000,
      "opt": 370000,
      "sp": 0,
    },
    {
      "age": 45,
      "base": 388735,
      "cons": 353664,
      "opt": 427140,
      "sp": 1392,
    },
    {
      "age": 50,
      "base": 563787,
      "cons": 482865,
      "opt": 660485,
      "sp": 2165,
    },
    {
      "age": 55,
      "base": 976110,
      "cons": 826145,
      "opt": 1169713,
      "sp": 3040,
    },
    {
      "age": 60,
      "base": 1356232,
      "cons": 1087920,
      "opt": 1723461,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 1567452,
      "cons": 1134837,
      "opt": 2200269,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 1654423,
      "cons": 1028556,
      "opt": 2650055,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.14,
}
`;

exports[`deriveAll – characterisation > complex: projection limited to one asset class 1`] = `
{
  "cashflowSample": [
    {
      "avail": 9100,
      "bound": 5190.83,
      "deficitMonthly": 0,
      "sp": 2500,
      "year": 2026,
    },
    {
      "avail": 10189.24,
      "bound": 3400,
      "deficitMonthly": 0,
      "sp": 1831.38,
      "year": 2031,
    },
    {
      "avail": 11410.52,
      "bound": 3400,
      "deficitMonthly": 0,
      "sp": 2901.35,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 264.83,
    "avail": 8164.5,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2500,
    "immoNetCF": -1700.33,
    "quote": 30.62,
    "saldo": 323.67,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 6,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 39,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 300000,
      "cons": 300000,
      "opt": 300000,
      "sp": 2500,
    },
    {
      "age": 45,
      "base": 469416,
      "cons": 434703,
      "opt": 506944,
      "sp": 1831,
    },
    {
      "age": 50,
      "base": 771247,
      "cons": 676915,
      "opt": 881149,
      "sp": 2901,
    },
    {
      "age": 55,
      "base": 1342094,
      "cons": 1144787,
      "opt": 1588329,
      "sp": 3126,
    },
    {
      "age": 60,
      "base": 1952837,
      "cons": 1573736,
      "opt": 2454932,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 2606283,
      "cons": 1948426,
      "opt": 3536088,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 3331423,
      "cons": 2273969,
      "opt": 4937171,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > demo: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 10036.67,
      "bound": 2500,
      "deficitMonthly": 0,
      "sp": 7536.67,
      "year": 2026,
    },
    {
      "avail": 11616.53,
      "bound": 2500,
      "deficitMonthly": 0,
      "sp": 9116.53,
      "year": 2031,
    },
    {
      "avail": 13531.04,
      "bound": 2500,
      "deficitMonthly": 0,
      "sp": 11031.04,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 1416.67,
    "avail": 10036.67,
    "bound": 2500,
    "deficitMonthly": 0,
    "eff": 7536.67,
    "immoNetCF": 120,
    "quote": 75.09,
    "saldo": 0,
    "streamExpense": 2500,
    "streamIncome": 8500,
  },
  "debt": 130000,
  "gross": 1560000,
  "loans": [
    {
      "annuitat": 850,
      "id": "a7",
      "yrsLeft": 25,
    },
  ],
  "net": 1430000,
  "projection": [
    {
      "age": 35,
      "base": 1430000,
      "cons": 1430000,
      "opt": 1430000,
      "sp": 7537,
    },
    {
      "age": 40,
      "base": 2544527,
      "cons": 2330807,
      "opt": 2779185,
      "sp": 9117,
    },
    {
      "age": 45,
      "base": 4190751,
      "cons": 3562527,
      "opt": 4944899,
      "sp": 11031,
    },
    {
      "age": 50,
      "base": 6590683,
      "cons": 5229565,
      "opt": 8371310,
      "sp": 13384,
    },
    {
      "age": 55,
      "base": 10102503,
      "cons": 7513716,
      "opt": 13785803,
      "sp": 17166,
    },
    {
      "age": 60,
      "base": 15148471,
      "cons": 10574736,
      "opt": 22216748,
      "sp": 20873,
    },
    {
      "age": 65,
      "base": 22341179,
      "cons": 14645670,
      "opt": 35251641,
      "sp": 25624,
    },
    {
      "age": 70,
      "base": 32553746,
      "cons": 20048844,
      "opt": 55324190,
      "sp": 31794,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 7536.67,
    },
  ],
  "wavgReturn": 7.44,
}
`;
